--- a/groupAndAZlist/View/Base.lproj/Main.storyboard
+++ b/groupAndAZlist/View/Base.lproj/Main.storyboard
@@ -3,31 +3,100 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Nasa View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="groupAndAZlist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="NasaViewController" customModule="groupAndAZlist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="haZ-8n-3Rf">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nTR-Ap-RtO">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oWH-2x-Xnb">
+                                    <size key="itemSize" width="190" height="225"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NasaCollectionViewCell" id="b1j-LK-Dah" customClass="NasaCollectionViewCell" customModule="groupAndAZlist" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="190" height="225"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pDm-BP-Jcg">
+                                            <rect key="frame" x="0.0" y="0.0" width="190" height="225"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0EU-Ap-UQr">
+                                                    <rect key="frame" x="8" y="54" width="174" height="116"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="116" id="ETe-Wv-rkr"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2H-9s-h58">
+                                                    <rect key="frame" x="8" y="182" width="174" height="0.0"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" name="NavBarTint"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="0EU-Ap-UQr" firstAttribute="leading" secondItem="pDm-BP-Jcg" secondAttribute="leading" constant="8" id="3KQ-hy-2Tw"/>
+                                                <constraint firstAttribute="trailing" secondItem="c2H-9s-h58" secondAttribute="trailing" constant="8" id="MNa-lx-9Qa"/>
+                                                <constraint firstAttribute="trailing" secondItem="0EU-Ap-UQr" secondAttribute="trailing" constant="8" id="XbL-Wx-dqz"/>
+                                                <constraint firstItem="c2H-9s-h58" firstAttribute="leading" secondItem="pDm-BP-Jcg" secondAttribute="leading" constant="8" id="bXO-sc-xSY"/>
+                                                <constraint firstItem="0EU-Ap-UQr" firstAttribute="top" secondItem="pDm-BP-Jcg" secondAttribute="top" constant="54" id="fiu-JL-qOq"/>
+                                                <constraint firstItem="c2H-9s-h58" firstAttribute="top" secondItem="0EU-Ap-UQr" secondAttribute="bottom" constant="12" id="iUh-DQ-VGz"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="customSize" width="190" height="225"/>
+                                        <connections>
+                                            <outlet property="iconImage" destination="0EU-Ap-UQr" id="BNw-cQ-ZEk"/>
+                                            <outlet property="titleLabel" destination="c2H-9s-h58" id="h4e-sJ-3Ar"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="haZ-8n-3Rf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7sG-Ze-v30"/>
+                            <constraint firstItem="haZ-8n-3Rf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Crx-yJ-azn"/>
+                            <constraint firstAttribute="bottom" secondItem="haZ-8n-3Rf" secondAttribute="bottom" id="JjL-a1-0ct"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nTR-Ap-RtO" secondAttribute="trailing" id="Ugc-fu-GEY"/>
+                            <constraint firstItem="nTR-Ap-RtO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hVQ-F4-IPe"/>
+                            <constraint firstItem="nTR-Ap-RtO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ngT-Bz-EV0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nTR-Ap-RtO" secondAttribute="bottom" id="oFM-SA-NDj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="haZ-8n-3Rf" secondAttribute="trailing" id="yh7-Vh-Glz"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DaO-7a-KMH"/>
+                    <connections>
+                        <outlet property="collectionView" destination="nTR-Ap-RtO" id="dzX-RM-lSG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="886.95652173913049" y="95.758928571428569"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--App Navigation Controller-->
         <scene sceneID="e8T-z2-q5K">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f7C-fu-aJ1" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f7C-fu-aJ1" customClass="AppNavigationController" customModule="groupAndAZlist" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="d7O-XZ-YWR">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -44,6 +113,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Image" width="213" height="339"/>
+        <namedColor name="NavBarTint">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
