--- a/groupAndAZlist/View/Base.lproj/Main.storyboard
+++ b/groupAndAZlist/View/Base.lproj/Main.storyboard
@@ -251,7 +251,7 @@
                                 </items>
                             </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="M0i-b8-6fo">
-                                <rect key="frame" x="0.0" y="88" width="414" height="675"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="719"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -474,8 +474,8 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="V3O-Ed-WB2"/>
-        <segue reference="Dlw-4h-ru5"/>
-        <segue reference="W9j-wg-g2Y"/>
+        <segue reference="gH5-Hw-IYl"/>
+        <segue reference="DZz-xi-LQy"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Image" width="213" height="339"/>
