--- a/groupAndAZlist/View/Cell/AZListTableViewCell.xib
+++ b/groupAndAZlist/View/Cell/AZListTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="361" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dv0-m0-c5H">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dv0-m0-c5H">
                         <rect key="frame" x="8" y="0.0" width="88" height="92"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="92" id="85X-ze-tdY"/>
