--- a/groupAndAZlist/View/Cell/GroupTableViewCell.xib
+++ b/groupAndAZlist/View/Cell/GroupTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="364" height="116"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fIt-SX-dZ5">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fIt-SX-dZ5">
                         <rect key="frame" x="8" y="0.0" width="87" height="113"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="113" id="nQa-kl-ujI"/>
