--- a/groupAndAZlist/View/Base.lproj/Main.storyboard
+++ b/groupAndAZlist/View/Base.lproj/Main.storyboard
@@ -130,6 +130,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="55J-qQ-r0q">
                                 <rect key="frame" x="0.0" y="44" width="414" height="719"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" id="DpN-nU-Kic">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </activityIndicatorView>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xoC-t5-Ock"/>
@@ -145,6 +149,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activeIndicator" destination="DpN-nU-Kic" id="kPG-wG-iih"/>
                         <outlet property="segment" destination="vew-VL-WBI" id="cNg-PC-A19"/>
                         <outlet property="tableView" destination="55J-qQ-r0q" id="c90-8h-AGa"/>
                         <outlet property="toolbar" destination="r96-xr-rH7" id="yQ6-oe-f4E"/>
@@ -191,22 +196,48 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="f2U-4b-xHi">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="763"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableFooterView" contentMode="redraw" id="AFi-Z0-0Xi">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z6A-gg-tRn">
+                                <rect key="frame" x="20" y="345" width="374" height="128"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="tbQ-1W-BkK">
+                                        <rect key="frame" x="0.0" y="30" width="374" height="68"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="tbQ-1W-BkK" firstAttribute="top" secondItem="z6A-gg-tRn" secondAttribute="top" constant="30" id="5zd-i9-laZ"/>
+                                    <constraint firstItem="tbQ-1W-BkK" firstAttribute="leading" secondItem="z6A-gg-tRn" secondAttribute="leading" id="ClE-o1-bWF"/>
+                                    <constraint firstAttribute="bottom" secondItem="tbQ-1W-BkK" secondAttribute="bottom" constant="30" id="DdV-Hq-j5o"/>
+                                    <constraint firstAttribute="trailing" secondItem="tbQ-1W-BkK" secondAttribute="trailing" id="u3r-bZ-DeM"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uvf-sx-3nq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="z6A-gg-tRn" firstAttribute="leading" secondItem="uvf-sx-3nq" secondAttribute="leading" constant="20" id="4wn-EL-wRJ"/>
                             <constraint firstItem="cEZ-WA-rGs" firstAttribute="leading" secondItem="uvf-sx-3nq" secondAttribute="leading" id="5aG-bh-QVs"/>
+                            <constraint firstItem="z6A-gg-tRn" firstAttribute="top" secondItem="uvf-sx-3nq" secondAttribute="top" constant="257" id="7UB-cl-KGO"/>
                             <constraint firstItem="f2U-4b-xHi" firstAttribute="leading" secondItem="uvf-sx-3nq" secondAttribute="leading" id="98f-vE-dql"/>
                             <constraint firstAttribute="trailing" secondItem="cEZ-WA-rGs" secondAttribute="trailing" id="R99-Ff-sCa"/>
                             <constraint firstAttribute="bottom" secondItem="cEZ-WA-rGs" secondAttribute="bottom" id="SFd-L4-fHc"/>
                             <constraint firstItem="cEZ-WA-rGs" firstAttribute="top" secondItem="f2U-4b-xHi" secondAttribute="bottom" id="Tjj-c4-U3g"/>
+                            <constraint firstItem="cEZ-WA-rGs" firstAttribute="top" secondItem="z6A-gg-tRn" secondAttribute="bottom" constant="290" id="WP5-26-bQw"/>
                             <constraint firstItem="f2U-4b-xHi" firstAttribute="top" secondItem="ZcF-Ks-tQb" secondAttribute="top" id="Zy7-cP-5bh"/>
                             <constraint firstItem="uvf-sx-3nq" firstAttribute="trailing" secondItem="f2U-4b-xHi" secondAttribute="trailing" id="fdZ-El-pNo"/>
+                            <constraint firstItem="uvf-sx-3nq" firstAttribute="trailing" secondItem="z6A-gg-tRn" secondAttribute="trailing" constant="20" id="x9f-1Y-JAF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="THF-MD-ChZ"/>
                     <connections>
+                        <outlet property="activeIndicatior" destination="tbQ-1W-BkK" id="ugQ-yx-asK"/>
+                        <outlet property="activeView" destination="z6A-gg-tRn" id="EG4-ri-Y6h"/>
                         <outlet property="segment" destination="OJK-vk-N66" id="Qu9-Je-lEV"/>
                         <outlet property="tableView" destination="f2U-4b-xHi" id="Lcl-My-gCR"/>
                         <outlet property="toolbar" destination="cEZ-WA-rGs" id="XJT-Sc-Slq"/>
@@ -214,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gRa-jN-oz0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2175" y="748"/>
+            <point key="canvasLocation" x="2173.913043478261" y="747.99107142857144"/>
         </scene>
         <!--Group View Controller-->
         <scene sceneID="gfG-mB-DBY">
@@ -251,17 +282,41 @@
                                 </items>
                             </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="M0i-b8-6fo">
-                                <rect key="frame" x="0.0" y="44" width="414" height="719"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="675"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="xsh-CM-OH4">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Pe-3S-uhr">
+                                <rect key="frame" x="20" y="361" width="374" height="128"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="ZjC-xd-7qv">
+                                        <rect key="frame" x="0.0" y="30" width="374" height="68"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="ZjC-xd-7qv" secondAttribute="trailing" id="4XI-QO-hy6"/>
+                                    <constraint firstItem="ZjC-xd-7qv" firstAttribute="top" secondItem="8Pe-3S-uhr" secondAttribute="top" constant="30" id="RfU-0A-E54"/>
+                                    <constraint firstItem="ZjC-xd-7qv" firstAttribute="leading" secondItem="8Pe-3S-uhr" secondAttribute="leading" id="hFs-xY-Daa"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZjC-xd-7qv" secondAttribute="bottom" constant="30" id="vgt-EX-AqC"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pLo-1i-fvV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="8Pe-3S-uhr" firstAttribute="top" secondItem="pLo-1i-fvV" secondAttribute="top" constant="273" id="3uu-RZ-POP"/>
+                            <constraint firstItem="pLo-1i-fvV" firstAttribute="trailing" secondItem="8Pe-3S-uhr" secondAttribute="trailing" constant="20" id="D3B-nP-uyF"/>
                             <constraint firstItem="M0i-b8-6fo" firstAttribute="leading" secondItem="pLo-1i-fvV" secondAttribute="leading" id="Fys-JH-gBl"/>
                             <constraint firstItem="YZt-My-WX9" firstAttribute="leading" secondItem="pLo-1i-fvV" secondAttribute="leading" id="Idh-t8-RmA"/>
+                            <constraint firstItem="8Pe-3S-uhr" firstAttribute="leading" secondItem="pLo-1i-fvV" secondAttribute="leading" constant="20" id="hCk-To-YI4"/>
                             <constraint firstItem="pLo-1i-fvV" firstAttribute="trailing" secondItem="M0i-b8-6fo" secondAttribute="trailing" id="hp6-oj-fNo"/>
                             <constraint firstItem="YZt-My-WX9" firstAttribute="top" secondItem="M0i-b8-6fo" secondAttribute="bottom" id="iBl-73-e6b"/>
+                            <constraint firstItem="YZt-My-WX9" firstAttribute="top" secondItem="8Pe-3S-uhr" secondAttribute="bottom" constant="274" id="l1h-Jv-Zrc"/>
                             <constraint firstItem="YZt-My-WX9" firstAttribute="trailing" secondItem="pLo-1i-fvV" secondAttribute="trailing" id="rNx-ci-q0o"/>
                             <constraint firstItem="M0i-b8-6fo" firstAttribute="top" secondItem="Elq-D8-jHQ" secondAttribute="topMargin" id="rbb-mY-O6j"/>
                             <constraint firstAttribute="bottom" secondItem="YZt-My-WX9" secondAttribute="bottom" id="yvx-Rp-BOY"/>
@@ -269,6 +324,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="hYk-Xs-qtc"/>
                     <connections>
+                        <outlet property="activeIndicator" destination="ZjC-xd-7qv" id="5Mi-b0-u7u"/>
+                        <outlet property="activeView" destination="8Pe-3S-uhr" id="ndw-Ys-dl4"/>
                         <outlet property="segment" destination="poq-TU-qBc" id="m15-la-Xvj"/>
                         <outlet property="tableView" destination="M0i-b8-6fo" id="KmM-mf-adI"/>
                         <outlet property="toolBar" destination="YZt-My-WX9" id="g6Z-OP-j5a"/>
@@ -276,7 +333,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LEe-8l-9ll" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3028" y="733"/>
+            <point key="canvasLocation" x="3027.536231884058" y="732.58928571428567"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4aE-pb-sFw">
@@ -474,7 +531,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="G33-4g-ZuP"/>
-        <segue reference="gH5-Hw-IYl"/>
+        <segue reference="Dlw-4h-ru5"/>
         <segue reference="W9j-wg-g2Y"/>
     </inferredMetricsTieBreakers>
     <resources>
