--- a/groupAndAZlist/View/Base.lproj/Main.storyboard
+++ b/groupAndAZlist/View/Base.lproj/Main.storyboard
@@ -194,7 +194,7 @@
                                 </items>
                             </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="f2U-4b-xHi">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="763"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="675"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <searchBar key="tableFooterView" contentMode="redraw" id="AFi-Z0-0Xi">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -228,8 +228,8 @@
                             <constraint firstAttribute="trailing" secondItem="cEZ-WA-rGs" secondAttribute="trailing" id="R99-Ff-sCa"/>
                             <constraint firstAttribute="bottom" secondItem="cEZ-WA-rGs" secondAttribute="bottom" id="SFd-L4-fHc"/>
                             <constraint firstItem="cEZ-WA-rGs" firstAttribute="top" secondItem="f2U-4b-xHi" secondAttribute="bottom" id="Tjj-c4-U3g"/>
+                            <constraint firstItem="f2U-4b-xHi" firstAttribute="top" secondItem="uvf-sx-3nq" secondAttribute="top" id="W34-gz-77N"/>
                             <constraint firstItem="cEZ-WA-rGs" firstAttribute="top" secondItem="z6A-gg-tRn" secondAttribute="bottom" constant="290" id="WP5-26-bQw"/>
-                            <constraint firstItem="f2U-4b-xHi" firstAttribute="top" secondItem="ZcF-Ks-tQb" secondAttribute="top" id="Zy7-cP-5bh"/>
                             <constraint firstItem="uvf-sx-3nq" firstAttribute="trailing" secondItem="f2U-4b-xHi" secondAttribute="trailing" id="fdZ-El-pNo"/>
                             <constraint firstItem="uvf-sx-3nq" firstAttribute="trailing" secondItem="z6A-gg-tRn" secondAttribute="trailing" constant="20" id="x9f-1Y-JAF"/>
                         </constraints>
@@ -238,6 +238,7 @@
                     <connections>
                         <outlet property="activeIndicatior" destination="tbQ-1W-BkK" id="ugQ-yx-asK"/>
                         <outlet property="activeView" destination="z6A-gg-tRn" id="EG4-ri-Y6h"/>
+                        <outlet property="searchBar" destination="AFi-Z0-0Xi" id="J72-X7-jSQ"/>
                         <outlet property="segment" destination="OJK-vk-N66" id="Qu9-Je-lEV"/>
                         <outlet property="tableView" destination="f2U-4b-xHi" id="Lcl-My-gCR"/>
                         <outlet property="toolbar" destination="cEZ-WA-rGs" id="XJT-Sc-Slq"/>
@@ -326,6 +327,7 @@
                     <connections>
                         <outlet property="activeIndicator" destination="ZjC-xd-7qv" id="5Mi-b0-u7u"/>
                         <outlet property="activeView" destination="8Pe-3S-uhr" id="ndw-Ys-dl4"/>
+                        <outlet property="searchBar" destination="xsh-CM-OH4" id="rWw-bf-4bM"/>
                         <outlet property="segment" destination="poq-TU-qBc" id="m15-la-Xvj"/>
                         <outlet property="tableView" destination="M0i-b8-6fo" id="KmM-mf-adI"/>
                         <outlet property="toolBar" destination="YZt-My-WX9" id="g6Z-OP-j5a"/>
@@ -407,32 +409,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2k-MS-BgK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4501" y="-414"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="5xC-Jb-A39">
-            <objects>
-                <navigationController id="IPb-8N-55f" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Dg2-EQ-tND">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TZd-WJ-Zom" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="125" y="1034"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="vzK-Pc-XyF">
-            <objects>
-                <navigationController id="Jav-gf-VSV" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="y9S-3R-lBR">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="biO-ZC-g4u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-549" y="863"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="z9M-Ka-B0u">
