--- a/groupAndAZlist/View/Cell/GalleryTAbleViewCell/GalleryTableViewCell.xib
+++ b/groupAndAZlist/View/Cell/GalleryTAbleViewCell/GalleryTableViewCell.xib
@@ -9,23 +9,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GalleryTableViewCell" rowHeight="135" id="KGk-i7-Jjw" customClass="GalleryTableViewCell" customModule="groupAndAZlist" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="405" height="135"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GalleryTableViewCell" rowHeight="185" id="KGk-i7-Jjw" customClass="GalleryTableViewCell" customModule="groupAndAZlist" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="407" height="185"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="405" height="135"/>
+                <rect key="frame" x="0.0" y="0.0" width="407" height="185"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oe7-HE-HHE">
-                        <rect key="frame" x="0.0" y="0.0" width="405" height="124"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oe7-HE-HHE">
+                        <rect key="frame" x="0.0" y="0.0" width="405" height="174"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="405" id="E6y-qB-PIp"/>
-                            <constraint firstAttribute="height" constant="135" id="S84-1f-mlb"/>
+                            <constraint firstAttribute="height" constant="174" id="S84-1f-mlb"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBZ-l5-UcP">
-                        <rect key="frame" x="289" y="49" width="104" height="20.5"/>
+                        <rect key="frame" x="289" y="74" width="106" height="33"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="106" id="hPI-PU-yeO"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -33,13 +36,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="WBZ-l5-UcP" secondAttribute="trailing" constant="12" id="62W-gR-1uW"/>
-                    <constraint firstAttribute="bottom" secondItem="oe7-HE-HHE" secondAttribute="bottom" constant="10" id="9MS-5v-7CX"/>
+                    <constraint firstAttribute="bottom" secondItem="oe7-HE-HHE" secondAttribute="bottom" constant="11" id="9MS-5v-7CX"/>
                     <constraint firstItem="oe7-HE-HHE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Gc6-L1-WbV"/>
-                    <constraint firstAttribute="trailing" secondItem="oe7-HE-HHE" secondAttribute="trailing" id="HP5-2H-web"/>
-                    <constraint firstAttribute="bottom" secondItem="WBZ-l5-UcP" secondAttribute="bottom" constant="43" id="OxK-Jf-rvX"/>
+                    <constraint firstAttribute="trailing" secondItem="oe7-HE-HHE" secondAttribute="trailing" constant="2" id="HP5-2H-web"/>
+                    <constraint firstAttribute="bottom" secondItem="WBZ-l5-UcP" secondAttribute="bottom" constant="78" id="OxK-Jf-rvX"/>
                     <constraint firstItem="oe7-HE-HHE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="TtQ-c4-p4a"/>
                     <constraint firstItem="WBZ-l5-UcP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="289" id="UF8-hn-Vcn"/>
-                    <constraint firstItem="WBZ-l5-UcP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="49" id="WPZ-yo-erV"/>
+                    <constraint firstItem="WBZ-l5-UcP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="74" id="WPZ-yo-erV"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -47,7 +50,7 @@
                 <outlet property="galleryImage" destination="oe7-HE-HHE" id="QQn-DH-ZS5"/>
                 <outlet property="galleryLabel" destination="WBZ-l5-UcP" id="Lxu-G1-5Xh"/>
             </connections>
-            <point key="canvasLocation" x="-287.68115942028987" y="49.21875"/>
+            <point key="canvasLocation" x="-286.23188405797106" y="65.959821428571431"/>
         </tableViewCell>
     </objects>
 </document>
